Initialize React app

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,20 @@ lerna-debug.log
 # System Files
 .DS_Store
 Thumbs.db
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
